<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_fragment_sheet"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/closeSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="@color/headLine"
            android:text="@string/aaditya_shah_the_founder_of_this_app_named_stock_buzz_is_a_young_talented_and_enthusiastic_businessman_who_with_the_new_tactics_took_his_business_to_a_new_height_he_started_his_entrepreneurial_journey_at_the_age_of_17"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/buzzAim"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/appConcept"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:text="@string/ca"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/greetings"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/help"/>


            <TextView
                android:id="@+id/developerSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="#0000EE"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/supportEmail"/>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>