<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    tools:context=".ContactActivity">


    <!--Relative layout to hold Map starts here-->
    <RelativeLayout
        android:id="@+id/relFirst"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/backPressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/mobile_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/backPressed"
            app:lottie_rawRes="@raw/mobile"
            app:lottie_autoPlay="true"
            android:adjustViewBounds="true"
            app:lottie_loop="true"/>




    </RelativeLayout>
    <!--Relative layout to hold Maps ends here-->


    <!--Contact layout starts here-->

    <RelativeLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rectangle_background_below_links"
        android:layout_below="@id/relFirst">

        <TextView
            android:id="@+id/generalManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rishav Agrawal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/headLine"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/gStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/generalManager"
            android:text="General Manager"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#ff0000"
            android:layout_marginStart="10dp"/>


        <!--Linear Layout to hold contact info-->

        <LinearLayout
            android:id="@+id/regards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gStatus"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_background_below_links"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/contactLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/custom_circle">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_place_24"
                            android:padding="5dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/locContact"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>




            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/dialNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/custom_circle">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_call_24"
                            android:padding="5dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/numContact"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/emailUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/custom_circle">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_email_24"
                            android:padding="5dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/gmailContact"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/contactGm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/custom_circle">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_work_24"
                            android:padding="5dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:text="@string/workGmailcontact"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>



            </RelativeLayout>



        </LinearLayout>

        <!--Linear Layout to hold contact info ends here-->

    </RelativeLayout>
    <!--Contact layout ends here-->

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_below="@id/contactLayout"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/share_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableTop="@drawable/ic_baseline_share_24"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/share_usContact"
        android:textColor="#4f4f4f"
        android:textSize="11sp" />

    <View
        android:layout_width="0.2dip"
        android:layout_height="18dip"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="4dp"
        android:background="#a9a9a9" />

    <TextView
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableTop="@drawable/ic_baseline_star_rate_24"
        android:drawablePadding="2dp"
        android:text="@string/rate_usContact"
        android:textColor="#4f4f4f"
        android:textSize="11sp" />

</LinearLayout>

    <TextView
        android:id="@+id/termsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#4f4f4f"
        android:layout_marginBottom="10dp"
        android:text="@string/terms_amp_conditionContact"/>



</RelativeLayout>